--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
     <button class="btn-tmp">Odpowiedzi</button>
 
+    <script src="js/save.js"></script>
     <script src="js/form.js"></script>
     <script src="js/info.js"></script>
     <script src="js/main.js"></script>
