start and save to base

--- a/finish.html
+++ b/finish.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-
+    <h3>Twój ślad węglowy wynosi:</h3>
+    TRANSPORT: <span class='transport'></span>kg
 
     <script src="js/finish.js"></script>
 </body>
