--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/btn.css">
+    <link rel="stylesheet" href="css/radio.css">
+    <link rel="stylesheet" href="css/input-text.css">
 </head>
 
 <body>
 
 
     <div class="main-container">
-        <h1 class="category-name">Kategoria</h1>
-
-        <div class="category-bar">
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
-            <div class="category-bar-item"></div>
+        <div class="category-name">
+            <ul>
+                <li>METRYCZKA <div> 1/2 </div></li>
+                <li>TRANSPORT <div></div></li>
+                <li>ENERGIA DOMU<div></div></li>
+                <li>JEDZENIE<div></div></li>
+                <li>ODPADY<div></div></li>
+                <li>CZAS WOLNY<div></div></li>
+                <li>KONSUMPCJA<div></div></li>
+            </ul>
         </div>
+
 
         <h3 class="page-number">1/7</h3>
         <div class="form-button-container">
 
-            <button class="btn btn-left"></button>
+            <button class="btn"><div class='btn-left'></div></button>
             <div class="form-box"></div>
-            <button class="btn btn-right"></button>
+            <button class="btn"><div class='btn-right'></div></button>
 
         </div>
 
@@ -38,7 +42,7 @@
 
     </div>
 
-    <button class="btn-tmp">Odpowiedzi</button>
+    <button class="btn-tmp">zapisz</button>
 
     <a href="finish.html">finish</a>
 
