dodana energia domu

--- a/finish.html
+++ b/finish.html
@@ -28,7 +28,13 @@
 
             <button class="btn-tip"> Co mogę zrobić? </button>
 
-            <div class="test"></div>
+            <div class="finish-info">
+                <p>Tylko my jesteśmy w stanie powstrzymać nasz wpływ na zmiany klimatyczne. Twoje decyzje, dobre nawyki inspirują do osiągnięcia najważniejszego dla każdego z nas celu: uniknięcia katastrofy klimatycznej.</p>
+                <div class="finish-info-box">
+                    <div class="ziemia"><img src="img/Ziemia_pods.png" alt=""></div>
+                    <p>Każda tona emisji CO2 przyczynia się do globalnego ocieplenia</p>
+                </div>
+            </div>
             <h3>Szczegóły</h3>
             <div class="details"></div>
 
