--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-
+    <div class="loading"> <div class="spinner"></div> </div>
     <section class="parallax">
         <div class="parallax-inner">
 
@@ -76,7 +76,7 @@
                     <div class="form-container">
                         <form class="form-box" autocomplete="off"></form>
                         <div class="btn-next-box"><button class="btn-next">Dalej</button></div>
-
+                        
                     </div>
 
 
@@ -109,6 +109,9 @@
     </a>
     <div class="more-info">Dowiedz się więcej o działalności <a href="#">naszej Fundacji</a></div>
     <div class="share"><img src="img/icons8-share-30.png" alt=""> <a href="">Udostępnij kalkulator znajomym</a> </div>
+
+
+    
 
 
     <script src="js/style.js"></script>
