--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/form.css">
-    <link rel="stylesheet" href="css/btn.css">
-    <link rel="stylesheet" href="css/radio.css">
-    <link rel="stylesheet" href="css/input-text.css">
-    <link rel="stylesheet" href="css/range.css">
-    <link rel="stylesheet" href="css/accessories.css">
-    <link rel="stylesheet" href="css/checkbox.css">
+    <title>Kalkulator</title>
+    <link rel="stylesheet" href="css/main/style.css">
+    <link rel="stylesheet" href="css/main/form.css">
+    <link rel="stylesheet" href="css/main/btn.css">
+    <link rel="stylesheet" href="css/main/radio.css">
+    <link rel="stylesheet" href="css/main/input-text.css">
+    <link rel="stylesheet" href="css/main/range.css">
+    <link rel="stylesheet" href="css/main/accessories.css">
+    <link rel="stylesheet" href="css/main/checkbox.css">
+    <link rel="stylesheet" href="css/main/loading.css">
 </head>
 
 <body>
@@ -104,21 +105,21 @@
     </section>
 
     <img class="logo" src="img/logo_CMYK_carbonfootprint_01_1.png" alt="">
-    <a href="#">
+    <a target="_blank" href="https://carbonfootprintfoundation.com/wspieraj/">
         <div class="btn-support">Wspieraj nas</div>
     </a>
-    <div class="more-info">Dowiedz się więcej o działalności <a href="#">naszej Fundacji</a></div>
-    <div class="share"><img src="img/icons8-share-30.png" alt=""> <a href="">Udostępnij kalkulator znajomym</a> </div>
+    <div class="more-info">Dowiedz się więcej o działalności <a target="_blank" href="https://carbonfootprintfoundation.com">naszej Fundacji</a></div>
+    <div class="share"><img src="img/icons8-share-30.png" alt=""> <a target="_blank" href="https://www.facebook.com/carbonfootprintfoundation/">Udostępnij kalkulator znajomym</a> </div>
 
 
     
 
-
-    <script src="js/style.js"></script>
-    <script src="js/save.js"></script>
-    <script src="js/form.js"></script>
-    <script src="js/info.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/server.js"></script>
+    <script src="js/main/style.js"></script>
+    <script src="js/main/save.js"></script>
+    <script src="js/main/form.js"></script>
+    <script src="js/main/info.js"></script>
+    <script src="js/main/main.js"></script>
 </body>
 
 </html>
