--- a/data.html
+++ b/data.html
@@ -27,7 +27,7 @@
 
     
 
-
-    <script src="js/data.js"></script>
+    <script src="js/server.js"></script>
+    <script src="js/data/data.js"></script>
 </body>
 </html>
