make english version

--- a/calc.html
+++ b/calc.html
@@ -52,37 +52,37 @@
 
                             </div>
                         </li>
-                        <li>TRANSPORT <div class="counter">
+                        <li> <span class="cat-t">TRANSPORT</span>  <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
                             </div>
                         </li>
-                        <li>ENERGIA DOMU<div class="counter">
+                        <li><span class="cat-e">ENERGIA DOMU</span> <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
                             </div>
                         </li>
-                        <li>ODPADY<div class="counter">
+                        <li><span class="cat-o">ODPADY</span> <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
                             </div>
                         </li>
-                        <li>JEDZENIE<div class="counter">
+                        <li><span class="cat-j">JEDZENIE</span> <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
                             </div>
                         </li>
-                        <li>CZAS WOLNY<div class="counter">
+                        <li><span class="cat-c">CZAS WOLNY</span> <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
                             </div>
                         </li>
-                        <li>KONSUMPCJA<div class="counter">
+                        <li><span class="cat-k">KONSUMPCJA</span> <div class="counter">
                                 <div class="q-nr"> 1 </div>
                                 <div class="slash"> / </div>
                                 <div class="q-in-cat"> 2 </div>
@@ -121,7 +121,7 @@
                             class="fb-xfbml-parse-ignore">Udostępnij</a>
                     </div>
                 </div>
-                <div class="more-info">Dowiedz się więcej o działalności <a target="_blank"
+                <div class="more-info"><span>Dowiedz się więcej o działalności</span> <a target="_blank"
                         href="https://carbonfootprintfoundation.com">naszej Fundacji</a></div>
 
             </div>
@@ -155,6 +155,7 @@
     <script src="js/main/form.js"></script>
     <script src="js/main/info.js"></script>
     <script src="js/main/main.js"></script>
+    <script src="js/main/lang.js"></script>
 </body>
 
 </html>
