--- a/data.html
+++ b/data.html
@@ -8,17 +8,20 @@
     <link rel="stylesheet" href="css/data.css">
 </head>
 <body>
-    <input class="filter-input" type="text">
+
+    <!-- <input class="filter-input" type="text">
     
     <button class="filter-button"> 
         Filtruj
-    </button>
+    </button> -->
 
-    <span class="codes"></span>
+    <!-- <span class="codes"></span> -->
 
     <button class="download-button"> 
         Download CSV
     </button>
+
+    <button class="change-data">zmień na surowe</button>
     
     <div class="code-description"></div>
 
