--- a/finish.html
+++ b/finish.html
@@ -60,7 +60,7 @@
             </div>
 
 
-            <h2 style="padding: 0 20px;">Twój roczny ślad węglowy</h2>
+            <h2 class="your-footprint" style="padding: 0 20px;">Twój roczny ślad węglowy</h2>
             <div class="rating">Jest bardzo źle! Emitujesz rocznie więcej CO2 niż statystyczny Polak.</div>
 
             <div class="stats-world">
@@ -69,15 +69,16 @@
             <button class="btn-tip"> CO MOGĘ ZROBIĆ? </button>
 
             <div class="finish-info">
-                <p>Tylko my jesteśmy w stanie powstrzymać nasz wpływ na zmiany klimatyczne. Twoje decyzje, dobre nawyki
-                    inspirują do osiągnięcia najważniejszego dla każdego z nas celu: uniknięcia katastrofy klimatycznej.
+                <h3>Twój wybór ma znaczenie!</h3>
+                <p>
+                    Postaraj się wdrożyć nasze rekomendacje. Pamiętaj, że aby ułatwić sprawiedliwą transformację, niezbędne są zmiany systemowe. Rozważ zaangażowanie się w lokalne inicjatywy i przemyśl, jakie elementy w kontekście ekologii, są dla Ciebie najważniejsze. System wpływa na to, jak funkcjonujemy, ale to my ten system tworzymy i mamy moc go zmienić.
                 </p>
                 <div class="finish-info-box">
-                    <div class="ziemia"><img src="img/Ziemia_pods.png" alt=""></div>
+                    <img src="img/Ziemia_pods.png" alt="">
                     <p>Każda tona emisji CO2 przyczynia się do globalnego ocieplenia</p>
                 </div>
             </div>
-            <h3>Szczegóły</h3>
+            <h3 class="header-details">Szczegóły</h3>
             <div class="details"></div>
 
             <div class="media-scroller-container">
@@ -98,7 +99,7 @@
                             class="fb-xfbml-parse-ignore">Udostępnij</a>
                     </div>
                 </div>
-                <div class="more-info">Dowiedz się więcej o działalności <a target="_blank"
+                <div class="more-info"><span>Dowiedz się więcej o działalności</span> <a target="_blank"
                         href="https://carbonfootprintfoundation.com/">naszej Fundacji</a>
                 </div>
 
@@ -128,6 +129,8 @@
     <script src="js/finish/recommendations.js"></script>
     <script src="js/finish/accordion.js"></script>
     <script src="js/finish/popup.js"></script>
+    <script src="js/finish/lang.js"></script>
+    
 
 </body>
 
