--- a/index.html
+++ b/index.html
@@ -34,10 +34,26 @@
 
         <div class="top-accessories">
             <img class="logo" src="img/logo_CMYK_carbonfootprint_01_1.png" alt="">
-            <a target="_blank" href="https://carbonfootprintfoundation.com/wspieraj/">
-                <div class="btn-support">Wspieraj nas</div>
-            </a>
+
+            <div class="right">
+                <a target="_blank" href="https://carbonfootprintfoundation.com/wspieraj/">
+                    <div class="btn-support">Wspieraj nas</div>
+                </a>
+                <div class="lang">
+                    <div class="lang-pl lang-inside lang-active">
+                        PL <img src="img/pl.svg" alt="">
+                    </div>
+                    <div class="lang-ang lang-inside">
+                        ENG <img src="img/gb.svg" alt="">
+                    </div>
+
+                </div>
+            </div>
+
+
         </div>
+
+
 
 
         <div class="container">
@@ -46,7 +62,7 @@
             <p>Podejmij pierwszy krok już teraz i skorzystaj z kalkulatora śladu węglowego stworzonego przez zespół
                 projektowy Carbon Footprint Foundation i dowiedz się jak zminimalizować swój ślad węglowy</p>
             <div class="code-container">
-                <p>Podaj kod:</p>
+                <p class="enter-code">Podaj kod:</p>
                 <input class="code-input" type="text">
                 <p class="wrong-code">Kod jest błędny</p>
 
@@ -61,8 +77,8 @@
             </button>
 
 
-            <div class="code-button"> <span class="code-q">Posiadasz kod?</span> <span class="code-q-btn"
-                    onclick="activateCodeContainer()">Kliknij tutaj</span>
+            <div class="code-button"> <span class="code-q"></span> <span class="code-q-btn"
+                    onclick="activateCodeContainer()"></span>
             </div>
         </div>
 
@@ -77,7 +93,7 @@
                         class="fb-xfbml-parse-ignore">Udostępnij</a>
                 </div>
             </div>
-            <div class="more-info">Dowiedz się więcej o działalności <a target="_blank"
+            <div class="more-info"><span>Dowiedz się więcej o działalności</span> <a target="_blank"
                     href="https://carbonfootprintfoundation.com/">naszej Fundacji</a>
             </div>
 
